# MicroShop

./: README.md  main.py  pyproject.toml
api_v1/products/: views.py
core/: config.py
core/models/: base.py  db_helper.py  product.py
micro_shop/: pyproject.toml
users/: crud.py
