[tool.poetry]
name = "microshop [fastapi]"
version = "0.1.0"
description = "FastAPI Micro-Shop"
authors = ["Dennis Mattews <alttert@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
